--- a/site.yml
+++ b/site.yml
@@ -9,7 +9,25 @@
     tags: all
     apt:
      upgrade: dist
-     update_cache: yes
+
+
+- hosts: workstation
+  become: true
+  tasks:
+
+  - name: install unzip
+    package:
+     name: unzip
+
+
+  - name: install terraform
+    unarchive:
+      src: https://releases.hashicorp.com/terraform/1.3.1/terraform_1.3.1_linux_amd64.zip
+      dest: /usr/local/bin
+      remote_src: yes
+      mode: 0755
+      owner: root
+      group: root
 
 
 - hosts: web_server
@@ -34,7 +52,8 @@
       owner: root
       group: root
       mode: 0644
-  
+   
+
 - hosts: file_server
   become: true
   tasks: 
